--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,11 @@
 @import '/src/scss/themes/theme-dark.scss';
 @import '/src/scss/themes/theme-light.scss';
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html {
 	font-size: 62.5%;
 	-webkit-font-smoothing: antialiased;
+	font-family: 'Montserrat', sans-serif;
 	margin: 0;
 	padding: 0;
 }
@@ -17,16 +18,19 @@ html {
 
 .title-container {
 	height: 50px;
+	font-size: 15px;
+	color:  darkgoldenrod;
 }
 
 .title-styles {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 250%;
 }
 
 .header-icon {
 	height: 150px;
 	width: 150px;
+	color: rgb(224, 165, 14);
 }
 
 header {
@@ -38,7 +42,7 @@ header {
 	-webkit-background-size: cover;
 	text-align: center;
 	overflow: hidden;
-	background-color: #e9d5a1;
+	background-color: #00202c;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -48,7 +52,7 @@ header {
 }
 
 header .nav {
-	font: 18px/24px 'opensans-bold', sans-serif;
+	font: 18px/24px 'Montserrat', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 5px;
 }
@@ -95,8 +99,8 @@ header h1 {
 	font-size: 400%;
 	text-align: center;
 	font-weight: 600 !important;
-	color: #353239;
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	color: goldenrod;
+	font-family: 'Montserrat', Arial, sans-serif;
 	margin: 0 auto 18px auto;
 	width: 100%;
 }
@@ -126,7 +130,7 @@ header h1 {
 
 #about h1 {
 	padding-top: 5%;
-	font: 18px/24px 'opensans-bold', sans-serif;
+	font: 18px/24px 'Montserrat', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	color: black;
@@ -175,7 +179,7 @@ header h1 {
 
 .project-title-settings {
 	margin-top: 5%;
-	font: 18px/24px 'opensans-bold', sans-serif;
+	font: 18px/24px 'Montserrat', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	color: black;
@@ -231,7 +235,7 @@ header h1 {
 }
 
 #resume {
-	background: #efe1bd;
+	background: #e4e4e4;
 }
 
 .experience-icon {
@@ -300,7 +304,7 @@ header h1 {
 }
 
 .bars li em {
-	font: 15px 'opensans-bold', sans-serif;
+	font: 15px 'Montserrat', sans-serif;
 	color: #313131;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -353,7 +357,7 @@ header h1 {
 }
 
 #portfolio {
-	background: #efe1bd;
+	background: #e4e4e4;
 	padding-bottom: 5%;
 }
 
@@ -399,7 +403,7 @@ header h1 {
 .section-title {
 	padding-top: 5%;
 	padding-bottom: 5%;
-	font: 18px/24px 'opensans-bold', sans-serif;
+	font: 18px/24px 'Montserrat', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	color: #fff;
